added sort, modal window, optimized

--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>homework_5_10_02</title>
   </head>
   <body>
+    <div class="sort_div">
+      <p class="sort">Sort</p>
+      <select class="select_item">
+        <option value="0">Default</option>
+        <option value="1">Ascending price &#8593</option>
+        <option value="2">Descending price &#8595</option>
+      </select>
+    </div>
     <script src="./homework_5_10_02.js"></script>
   </body>
 </html>
