--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>homework_5_10_02</title>
+    <title>Fetch_requests_creating_products-JS</title>
   </head>
   <body>
     <div class="sort_div">
@@ -31,6 +31,6 @@
         <option value="2">Descending price &#8595</option>
       </select>
     </div>
-    <script src="./homework_5_10_02.js"></script>
+    <script src="./Fetch_requests_creating_products-JS.js"></script>
   </body>
 </html>
